build/validrdfa/tests/snapshots/test_cases__cases@rdfa1.1__html5__0120.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0120.html
---
@base <file:///0120.html> .
@prefix dc11: <http://purl.org/dc/elements/1.1/> .
@prefix xhv: <http://www.w3.org/1999/xhtml/vocab#> .
xhv: dc11:title "The XHTML Vocabulary Document" .
