build/validrdfa/tests/snapshots/test_cases__cases@rdfa1.1__html5__0126.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0126.html
---
@base <file:///0126.html> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
<http://www.example.org/#article> a <http://rdfs.org/sioc/ns#Post> , foaf:Document ;
	dc:title "My article" .
