build/validrdfa/tests/snapshots/test_cases__cases@rdfa1.1__html5__0140.html-2.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(processor_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0140.html
---
@base <file:///0140.html> .
@prefix dc: <http://purl.org/dc/terms/> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix rdfa: <http://www.w3.org/ns/rdfa#> .
_:9f7f73f4549822b0 a rdfa:Warning ;
	dc:description "@property cannot refer to a bnode: [_:invalid]" .
