build/validrdfa/tests/snapshots/test_cases__cases@rdfa1.1__html5__0175.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0175.html
---
@base <file:///0175.html> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
_:828bd59a80a62dbb foaf:name "Gregg Kellogg" .
