build/validrdfa/tests/snapshots/test_cases__cases@rdfa1.1__html5__0176.html.snap
---
source: validrdfa/tests/test-cases.rs
expression: "utils::serialize_graph(output_graph, base.as_str(),)"
input_file: validrdfa/tests/rdfa.github.io/test-suite/test-cases/rdfa1.1/html5/0176.html
---
@base <file:///0176.html> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
_:17e81685513f8d5f foaf:knows _:b1e268cdea35ae30 ;
	foaf:mbox <mailto:manu.sporny@digitalbazaar.com> .
_:b1e268cdea35ae30 foaf:knows _:17e81685513f8d5f ;
	foaf:mbox <mailto:gregg@kellogg-assoc.com> .
